fixed spacing issue on contact

--- a/app/globals.css
+++ b/app/globals.css
@@ -577,4 +577,7 @@ row {
     font-size: small !important;
   }
 
+  .hear-from {
+    font-size: medium !important;
+  }
 }
